--- a/biostatistics.html
+++ b/biostatistics.html
@@ -95,7 +95,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://glpg.recruitee.com/o/team-leader-biostatistics-mechelen-be'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://glpg.recruitee.com/o/team-leader-biostatistics-mechelen-be'>
       Team Leader Biostatistics -Mechelen, BE - Galapagos
     </a></h5> 
 <p><span class="badge badge-light">Mechelen, Belgium  France</span></p>
@@ -193,7 +193,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Brisbane</span></p>
 <p>Posted on: 2019-09-26</p>
 <hr/>
-<h5><a href='https://jobs.mdanderson.org/search/jobdetails/research-assistant-i-radiation-oncology-biostatistics/b0204d6a-2a19-41e2-b325-e5311c691166?s_cid=ssTW'>Research Assistant I, Radiation Oncology Biostatistics | Houston, TX | MD Anderson</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.mdanderson.org/search/jobdetails/research-assistant-i-radiation-oncology-biostatistics/b0204d6a-2a19-41e2-b325-e5311c691166?s_cid=ssTW'>Research Assistant I, Radiation Oncology Biostatistics | Houston, TX | MD Anderson</a></h5> 
 <p><span class="badge badge-light">Houston, TX</span></p>
 <p>Posted on:: 2019-09-23</p>
 <hr/>
@@ -227,7 +227,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/licor/jobs/1837383'>Job Application for Sales Consultant, Bio (United States, Atlanta based) at LI-COR</a></h5> 
+<h5><a href='https://boards.greenhouse.io/licor/jobs/1837383'>Job Application for Sales Consultant, Bio (United States, Atlanta based) at LI-COR</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
@@ -241,11 +241,11 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Maine, United States</span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/o2rAafwX'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/premier-research/job/o2rAafwX'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Kiev, Ukraine</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/o4rAafwZ'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/o4rAafwZ'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Sofia, Bulgaria</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
@@ -265,7 +265,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Brisbane</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/o2rAafwX'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='https://jobs.jobvite.com/premier-research/job/o2rAafwX'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Kiev, Ukraine</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -388,7 +388,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p>Aug 11, 2019 ... The Advanced Biostatistics & Data Analytics (ABDA) Centre of Excellence is part 
 of the Biostatistics department in the R&D Development organisation.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/153346D349'>Statistics & Data Corporation (SDC) - Jobs: Principal Biostatistician - Remote - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/153346D349'>Statistics & Data Corporation (SDC) - Jobs: Principal Biostatistician - Remote - Apply online</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-08-24</p>
 <hr/>
@@ -416,7 +416,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-prahs.icims.com/jobs/54099/principal-biostatistician/job'>Principal Biostatistician in</a></h5> 
+<h5><a href='https://uscareers-prahs.icims.com/jobs/54099/principal-biostatistician/job'>Principal Biostatistician in</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 8, 2019 ... Serves as an independent reporting statistician on data monitoring committees. 
 Develops statistical analysis plans and reporting specifications for simple to?...</p>
@@ -427,7 +427,7 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-08-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://glpg.recruitee.com/o/biostatistics-leader-possibility-to-work-from-our-locations-in-be-nl-fr-or-ch'>
+<h5><a href='https://glpg.recruitee.com/o/biostatistics-leader-possibility-to-work-from-our-locations-in-be-nl-fr-or-ch'>
       Biostatistics Leader - possibility to work from our locations in BE, NL, FR or CH - Galapagos
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -447,7 +447,7 @@ of focus, using the appropriate statistical and machine learning methodologies?.
 <p><span class="badge badge-light">South San Francisco, CA</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
-<h5><a href='https://stanford.referrals.selectminds.com/jobs/biostatistician-1-7648'>Biostatistician 1 - Stanford University Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://stanford.referrals.selectminds.com/jobs/biostatistician-1-7648'>Biostatistician 1 - Stanford University Careers</a></h5> 
 <p><span class="badge badge-light">Redwood City California, United States</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
